# CS39440-Major-Project

./: .clang-format  .clang-format-ignore  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  build.sh  check.sh  format.sh  test-gamelibrary.xml
.github/workflows/: build.yaml  cmake.yaml  docs.yaml
.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake
Language Selection/: main.typ  template.typ
Project Outline/: ieee-notes.csl  old_dev_section.txt  template.typ  watch.ps1
docs/: template-note.txt  template.typ
docs/00-Weekly_Logs/: kas143_WeeklyLog.typ  template.typ
docs/01-Project_Outline/: bibliography.yml  ieee-notes.csl  kas143_ProjectOutline.typ
docs/02-Language_Selection/: kas143_LanguageSelection.typ
docs/03-Requirements_Analysis/: kas143_RequirementsAnalysis.typ
docs/04-Class_Diagram/: class_diagram.cmapx  class_diagram.uml  watch.sh
docs/05-Database_Schema/: database_schema.uml  watch.sh
docs/06-Mid_Project_Demonstration/: slides.typ
docs/Final_Report/: bibliography.yml  kas143_ProjectReport_2024.typ  template.typ
docs/Final_Report/assets/diagrams/: .$Architecture Diagram.drawio.bkp  Architecture Diagram.drawio
docs/Language Selection/: main.typ  template.typ
docs/Project Outline/: bibliography.yml  main.typ  old_dev_section.txt  watch.ps1
docs/doxygen/html/: addgamedialog_8cpp.html  addgamedialog_8h.html  addgamedialog_8h.js  addgamedialog_8h_source.html  annotated.html  annotated_dup.js  classAddGameDialog-members.html  classAddGameDialog.html  classAddGameDialog.js  classGame-members.html  classGame.html  classGame.js  classGameDatabase-members.html  classGameDatabase.html  classGameDatabase.js  classGameItemDelegate-members.html  classGameItemDelegate.html  classGameItemDelegate.js  classGameLibrary-members.html  classGameLibrary.html  classGameLibrary.js  classGameLibraryModel-members.html  classGameLibraryModel.html  classGameLibraryModel.js  classGameView-members.html  classGameView.html  classGameView.js  classMainWindow-members.html  classMainWindow.html  classMainWindow.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_c1be8d27e7f84178e95f152701110b19.html  dir_c1be8d27e7f84178e95f152701110b19.js  doxygen_crawl.html  files.html  functions.html  functions_enum.html  functions_eval.html  (+37 more)
docs/doxygen/html/search/: all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_c.js  all_d.js  all_e.js  classes_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  pages_0.js
docs/doxygen/latex/: addgamedialog_8h_source.tex  annotated.tex  classAddGameDialog.eps  classAddGameDialog.tex  classGame.tex  classGameDatabase.tex  classGameItemDelegate.eps  classGameItemDelegate.tex  classGameLibrary.eps  classGameLibrary.tex  classGameLibraryModel.eps  classGameLibraryModel.tex  classGameView.eps  classGameView.tex  classMainWindow.tex  files.tex  game_8h_source.tex  gamedatabase_8h_source.tex  gameitemdelegate_8h_source.tex  gamelibrary_8h_source.tex  gamelibrarymodel_8h_source.tex  gameview_8h_source.tex  hierarchy.tex  mainwindow_8h_source.tex  md_README.tex  refman.tex
modules/: BreezeThemes.cmake
res/: kas143.GamePile.desktop
src/: CMakeLists.txt  addgamedialog.cpp  addgamedialog.h  gamedetailswidget.h  gameeditdialog.cpp  gameeditdialog.h  gameentry.cpp  gameentry.h  gameitemdelegate.cpp  gameitemdelegate.h  gamelist.cpp  gamelist.h  gameview.cpp  gameview.h  main.cpp  mainWindow.ui  mainwindow.cpp  mainwindow.h  resources.qrc  searchbarwidget.cpp  searchbarwidget.h
src/data/: game.cpp  game.h  gameattributehelper.cpp  gameattributehelper.h  gamedatabase.cpp  gamedatabase.h  gamedatabasehelper.cpp  gamedatabasehelper.h  gameentry.h  gamehelper.cpp  gamehelper.h  gameiconcontroller.cpp  gameiconcontroller.h  gamelibrary.cpp  gamelibrary.h  gamelibrarymodel.cpp  gamelibrarymodel.h  gamepileapi.cpp  gamepileapi.h  gamepileapiworker.cpp  gamepileapiworker.h  hardcoded-data.cpp
src/data/model/: gamelibrarymodel.cpp  gamelibrarymodel.h
src/models/: gameListDelegate.cpp  gamelistmodel.cpp  gamelistmodel.h
src/ui/: attributefilter.cpp  attributefilter.h  filterswidget.cpp  filterswidget.h  filtertoolbar.cpp  filtertoolbar.h  gamedetailswidget.cpp  gamedetailswidget.h  gameeditdialog.cpp  gameeditdialog.h  gameitemdelegate.cpp  gameitemdelegate.h  gamelibraryproxymodel.cpp  gamelibraryproxymodel.h  gameview.cpp  gameview.h  removableitemwidget.cpp  removableitemwidget.h  removablelistwidgetitem.cpp  removablelistwidgetitem.h  searchbarwidget.cpp  searchbarwidget.h  statusfilter.cpp  statusfilter.h
test/: CMakeLists.txt  test_gamelibrary.cpp
